<resources>
    <string name="app_name">ClientList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="client">Клиент</string>



    <string name="name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="phone_number">Телефон</string>
    <string name="important">Важный</string>
    <string name="normal">Обычный</string>
    <string name="special">Особенный</string>
    <string name="no_important">Не важный</string>
    <string name="notes">Заметки</string>
    <string name="importance">Важность</string>

    <string name="settings">Настройки</string>
    <string name="general_settings">Главные настройки</string>
    <string name="web_page">Web страница</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="search">Search</string>
    <string name="search_tip">Поиск по имени</string>

    <string name="delete_message">Вы действительно хотите удалить клиента?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="browser_message">Открыть страницу с помощью : </string>
    <string name="browser_link">https://pl.wikipedia.org/wiki/Wikipedia:Strona_g%C5%82%C3%B3wna</string>

    <string name="text_settings">Настройки текста</string>
    <string name="text_colors_name">Цвет имени клиента</string>
    <string name="text_colors_summary_name">Выберите цвет имени клиента</string>
    <string name="text_colors_surname">Цвет фамилии клиента</string>
    <string name="text_colors_summary_surname">Выберите цвет фамилии клиента</string>
    <!-- KEYS -->
    <string name="text_name_colors_key">text_name_color_key</string>
    <string name="text_surname_colors_key">text_surname_color_key</string>





</resources>
